# fibon

./: .gitignore  .gitmodules  FibonFind.hs  FindBench.hs  FindConfig.hs  LICENSE  README  README.md  Setup.hs  TODO  fibon.cabal
benchmarks/Fibon/: Benchmarks.hs
benchmarks/Fibon/Benchmarks/Real/Mines/: LICENSE  README  mines.cabal
benchmarks/Fibon/Benchmarks/Real/Mines/examples/: samplerun.txt
benchmarks/Fibon/Benchmarks/Real/Mines/src/: GA.hs  Mines.hs  NN.hs  SVG.hs  Vectors.hs
benchmarks/Fibon/Benchmarks/Spectral/Scc/: scc.cabal
benchmarks/Fibon/Benchmarks/Spectral/Scc/Fibon/: Config.hs  Instance.hs
config/: README
config/Fibon/Config/: Default.hs
lib/Fibon/: BenchmarkInstance.hs  Benchmarks.hs  ConfigMonad.hs  FlagConfig.hs  InputSize.hs  Result.hs  RunConfig.hs  Timeout.hs  Types.hs
tools/fibon-add/: Main.hs
tools/fibon-analyse/Fibon/Analyse/: Analysis.hs  AnalysisRoutines.hs  CommandLine.hs  ExtraStats.hs  Main.hs  Metrics.hs  Output.hs  Parse.hs  Result.hs  Statistics.hs  TableSpec.hs  Tables.hs
tools/fibon-analyse/Fibon/Analyse/ExtraStats/: GhcStats.hs
tools/fibon-init/: Main.hs
tools/fibon-nofib/: Main.hs  Util.hs
tools/fibon-run/: Main.hs
tools/fibon-run/Fibon/Run/: Actions.hs  BenchmarkBundle.hs  BenchmarkHelper.hs  BenchmarkRunner.hs  CommandLine.hs  Commands.hs  Config.hs  Log.hs  Main.hs  Manifest.hs  SysTools.hs
tools/fibon-run/Fibon/Run/Config/: Default.hs  Local.hs  LocalConfigFinder.hs
