-- The name of the package.
Name:                fibon
Version:             1.0.0
Synopsis:            A reworking of the classic nofib benchmark suite
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              David M Peixotto
Maintainer:          dmp@rice.edu
Stability:           Experimental
Category:            Testing
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
--Extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2

--Library
--  exposed-modules:  Fibon.Types
--                  , Fibon.Benchmarks
--  other-modules:    Fibon.Benchmarks.Spectral.Scc.Fibon.RunConfig
--  hs-source-dirs:   tools/fibon-lib
--                  , benchmarks/
--  build-depends:    base >= 4 && < 5

Executable fibon-run
  main-is:          Fibon/Run/Main.hs
  ghc-options: -Wall
  hs-source-dirs: tools/fibon-run
                  lib
                  benchmarks
                  config
  build-depends:  base >= 4 && < 5
                , containers  >= 0.3     && < 0.4
                , mtl         >= 1.1     && < 1.2
                , pretty-show >= 1.1     && < 1.2
                , directory   >= 1.0.1   && < 1.2
                , filepath    >= 1.1.0.3 && < 1.2
                , hslogger    >= 1.0.10  && < 1.1
                , process     >= 1.0.1.2 && < 1.1

                , criterion   >= 0.5.0.1 && < 0.6
                , statistics  >= 0.5.1.0 && < 0.6
                , mwc-random  >= 0.5.0.0 && < 0.6
                , vector      >= 0.6.0.2 && < 0.7
--  other-modules:  Fibon.Benchmarks

