-- The name of the package.
Name:                fibon
Version:             1.0.0
Synopsis:            A reworking of the classic nofib benchmark suite
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              David M Peixotto
Maintainer:          dmp@rice.edu
Stability:           Experimental
Category:            Testing
Build-type:          Custom

-- Extra files to be distributed with the package, such as examples or
-- a README.
--Extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.8

Flag analyse
  description: Build the fibon-analyse program
  default: True

Executable fibon-run
  main-is:          Fibon/Run/Main.hs
  ghc-options: -Wall -threaded
  include-dirs: config
  hs-source-dirs: tools/fibon-run
                  lib
                  benchmarks
                  config
  build-depends:  base >= 4 && < 5
                , containers
                , mtl         == 1.1.*
                , directory   == 1.0.*
                , filepath    == 1.1.*
                , hslogger    == 1.0.*
                , process     == 1.0.*
                , time        == 1.1.*
                , old-locale  == 1.0.*
                , statistics  == 0.6.*
                , vector      == 0.6.*
--  other-modules:  Fibon.Benchmarks

Executable fibon-init
  main-is:        Main.hs
  ghc-options:    -Wall
  hs-source-dirs: tools/fibon-init
  build-depends:  base >= 4 && < 5
                , filepath    == 1.1.*
                , directory   == 1.0.*
                , Cabal == 1.8.*

Executable fibon-analyse
  if (flag(analyse))
    buildable: True
  else
    buildable: False
  main-is:        Fibon/Analyse/Main.hs
  ghc-options:    -Wall
  hs-source-dirs: tools/fibon-analyse, lib
  if (flag(analyse))
    build-depends:    base >= 4 && < 5
                    , containers
                    , mtl        == 1.1.*
                    , filepath   == 1.1.*
                    , bytestring == 0.9.*
                    , text       == 0.8.*
                    , tabular    == 0.2.*
                    , vector     == 0.6.*
                    , statistics == 0.6.*
  extensions: CPP
