-- The name of the package.
Name:                scc
Version:             1.0.0
Synopsis:            Strongly connected components
Category:            Benchmarking
Build-type:          Simple
Cabal-Version: >= 1.2

Executable scc
  main-is:        Main.hs
  hs-source-dirs: src
  build-depends:  base >= 4 && < 5

